[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2021"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde_json = "1.0.91"
#gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
futures = "0.3.25"
gloo-net = "0.2.5"
pin-utils = "0.1.0"
log = "0.4.17"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
yew-utils = "0.2.0"
gloo-utils = "0.1.6"
gloo = "0.8.0"
yew-hooks = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"

[dev-dependencies.web-sys]
version = "0.3"
features = ["Document", "Element", "HtmlCollection"]
